[gd_scene load_steps=9 format=2]

[ext_resource path="res://TitleScreenStuff/static.png" type="Texture" id=1]
[ext_resource path="res://TitleScreenStuff/Danny.png" type="Texture" id=2]
[ext_resource path="res://TitleScreenStuff/play.png" type="Texture" id=3]
[ext_resource path="res://TitleScreenStuff/play2.png" type="Texture" id=4]
[ext_resource path="res://TitleScreenStuff/Title.png" type="Texture" id=5]
[ext_resource path="res://TitleScreenStuff/quit.png" type="Texture" id=6]
[ext_resource path="res://TitleScreenStuff/full.png" type="Texture" id=7]
[ext_resource path="res://TitleScreenStuff/TitleScreenScript.gd" type="Script" id=8]

[node name="Title" type="Node2D"]

[node name="Danny" type="Sprite" parent="."]
position = Vector2( 923.065, 386.103 )
scale = Vector2( 1.80573, 1.5491 )
texture = ExtResource( 2 )
hframes = 5
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="Danny"]
one_shot = true
autostart = true

[node name="Static" type="Timer" parent="Danny"]
wait_time = 0.05
one_shot = true
autostart = true

[node name="Title" type="Sprite" parent="."]
position = Vector2( 352.916, 192.364 )
scale = Vector2( 0.654331, 0.558114 )
z_index = 2
texture = ExtResource( 5 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 227.665, 454.732 )
scale = Vector2( 0.238598, 0.132621 )
z_index = 2
normal = ExtResource( 3 )
pressed = ExtResource( 4 )

[node name="static" type="Sprite" parent="."]
position = Vector2( 652.006, 377.779 )
scale = Vector2( 1.42826, 1.69044 )
texture = ExtResource( 1 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="."]
position = Vector2( 223.451, 527.395 )
scale = Vector2( 0.238598, 0.132621 )
z_index = 2
normal = ExtResource( 7 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="."]
position = Vector2( 8.10503, 718.961 )
scale = Vector2( 0.0522885, 0.0458192 )
z_index = 2
normal = ExtResource( 6 )

[connection signal="timeout" from="Danny/Timer" to="Danny" method="_on_Timer_timeout"]
[connection signal="timeout" from="Danny/Static" to="Danny" method="_on_Static_timeout"]
[connection signal="released" from="TouchScreenButton" to="Danny" method="_on_TouchScreenButton_released"]
[connection signal="pressed" from="TouchScreenButton2" to="Danny" method="_on_TouchScreenButton2_pressed"]
[connection signal="pressed" from="TouchScreenButton3" to="Danny" method="_on_TouchScreenButton3_pressed"]
